Category
Create, List, Delete, Update Swagger
