# app/models/index.js
@@ -1,0 +1,15 @@
+const mongoose = require('mongoose');
+mongoose.Promise = global.Promise;
+
+const db = {};
+
+db.mongoose = mongoose;
+
+db.user = require("./user/user.model");
+db.role = require("./user/role.model");
+db.refreshToken = require("./user/refreshToken.model");
+db.category = require("./category/category.model");
+
+db.ROLES = ["user", "admin"];
+
+module.exports = db;
